# fastapi-server-template

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  mkdocs.yml  pyproject.toml  replace_placeholders.sh  requirements.txt
.github/workflows/: app.yaml  python_test.yaml  semantic_release.yaml
alembic/: env.py
alembic/versions/: 3ca4a9ff6bce_added_test_table.py
config/: config.dev.yaml  config.prod.yaml  config.yaml
logging_config/: logging.dev.ini  logging.prod.ini
service/: __init__.py  api.py  config.py  utils.py
service/database/: database.py  models.py
service/schemas/: healthcheck.py  tag.py
src/service/: __init__.py  api.py  config.py  prometheus_metrics.py  utils.py
src/service/database/: database.py  models.py
src/service/repository/: tag_repository.py
src/service/routes/: __init__.py  healthcheck.py  tag.py
src/service/routes/v1/: __init__.py  healthcheck.py  tag.py
src/service/schemas/: __init__.py  camel_case.py  config.py  healthcheck_schema.py  tag.py  tag_schema.py
src/service/service/: tag_service.py
tests/: conftest.py
tests/routes/: test_healthcheck.py  test_tag.py
tests/routes/v1/: test_healthcheck.py  test_tag.py
